--- a/index.html
+++ b/index.html
@@ -316,6 +316,73 @@
         </div>
     </div>
 
+    <div class="service py-60">
+        <div class="container">
+            <div class="service-wrapper">
+                <div class="section-heading">
+                    <h1 class="section-heading__title">Our Service</h1>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div class="service-thumb">
+                            <img src="assets/images/icons/Payments_3.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-7">
+                        <div class="row g-4 align-items-center justify-content-center">
+                            <div class="col-sm-6">
+                                <div class="service-card">
+                                    <div class="service-card__image">
+                                        <img src="assets/images/icons/Reports.svg" alt="">
+                                    </div>
+                                    <h4 class="service-card__title">Works</h4>
+
+                                    <ul class="service-list">
+                                        <li>Select jobs you like</li>
+                                        <li>Complete these tasks</li>
+                                        <li>Explore required tasks</li>
+                                        <li>Send required proofs</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="service-card">
+                                    <div class="service-card__image">
+                                        <img src="assets/images/icons/Tasks.svg" alt="">
+                                    </div>
+                                    <h4 class="service-card__title">Job</h4>
+
+                                    <ul class="service-list">
+                                        <li>Select jobs you like</li>
+                                        <li>Complete these tasks</li>
+                                        <li>Explore required tasks</li>
+                                        <li>Send required proofs</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="service-card">
+                                    <div class="service-card__image">
+                                        <img src="assets/images/icons/Invoicing-Payments.svg" alt="">
+                                    </div>
+                                    <h4 class="service-card__title">Earn/Deposit</h4>
+
+                                    <ul class="service-list">
+                                        <li>Select jobs you like</li>
+                                        <li>Complete these tasks</li>
+                                        <li>Explore required tasks</li>
+                                        <li>Send required proofs</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- footer section -->
     <footer class="footer-area">
         <div class="py-60">
