--- a/about.html
+++ b/about.html
@@ -89,230 +89,49 @@
         </div>
     </div>
 
-    <!-- banner section -->
-    <div class="banner-section">
+    <!-- ==================== Breadcrumb Start Here ==================== -->
+    <section class="breadcrumb py-60">
         <div class="container">
-            <div class="row gy-4 align-items-center">
-                <div class="col-lg-6">
-                    <div class="banner-content">
-                        <h2>Best Freelance Sites for Online Income: Microjobs and More!</h2>
-                        <p class="banner-text">Top Microjob and Freelancing Platforms: Your Ultimate Guide to Making
-                            Money Online. Explore the Best Microjob and Freelancing Platforms for Ultimate Online
-                            Earnings. Your Go-To Guide for Making Money Online awaits!</p>
-
-                        <a href="" class="btn btn--base mt-4">Earn Money</a>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="banner-thumb">
-                        <img src="assets/images/thumbs/EN.png" alt="">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="breadcrumb__wrapper">
+                        <h2 class="breadcrumb__title">About Us</h2>
+                        <ul class="breadcrumb__list">
+                            <li class="breadcrumb__item"><a href="index.html" class="breadcrumb__link"> <i
+                                        class="las la-home"></i> Home</a> </li>
+                            <li class="breadcrumb__item"><i class="fas fa-arrow-right"></i></li>
+                            <li class="breadcrumb__item"> <span class="breadcrumb__item-text">About Us </span> </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="counter pb-60">
+
+    <div class="about py-60">
         <div class="container">
-            <div class="row g-3">
-                <div class="col-sm-6 col-lg-3">
-                    <div class="counter-box">
-                        <div class="counter-box__icon">
-                            <img src="assets/images/icons/cv.png" alt="">
-                        </div>
-                        <h4 class="counter-box__count">225741</h4>
-                        <div class="counter-box__title">Job Posted</div>
+            <div class="row justify-content-center align-items-center gy-4 gx-5">
+                <div class="col-lg-5">
+                    <div class="about-thumb">
+                        <img src="assets/images/thumbs/find-great-work@2x.webp" alt="">
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="counter-box user-box">
-                        <div class="counter-box__icon">
-                            <img src="assets/images/icons/team.png" alt="">
-                        </div>
-                        <h4 class="counter-box__count">225741</h4>
-                        <div class="counter-box__title">Job Posted</div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="counter-box">
-                        <div class="counter-box__icon">
-                            <img src="assets/images/icons/success.png" alt="">
-                        </div>
-                        <h4 class="counter-box__count">225741</h4>
-                        <div class="counter-box__title">Job Posted</div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-3">
-                    <div class="counter-box">
-                        <div class="counter-box__icon">
-                            <img src="assets/images/icons/earning.png" alt="">
-                        </div>
-                        <h4 class="counter-box__count">225741</h4>
-                        <div class="counter-box__title">Job Posted</div>
+                <div class="col-lg-6">
+                    <div class="about-content">
+                        <h3>Empowering Your Earnings About Free Work Job</h3>
+                        <p>"At Free Work Job, we are dedicated to transforming the way you work and earn online.
+                            Discover a dynamic platform that connects skilled individuals with diverse opportunities,
+                            fostering a global community of freelancers and microjob enthusiasts. Our mission is to
+                            empower you to unlock your potential, providing a seamless and secure environment for work,
+                            collaboration, and financial growth. Join us in redefining the future of online work and
+                            explore endless possibilities with Free Work Job
+                        </p>
+
+                        <a href="" class="btn btn--base mt-4">Explore Now</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="activity py-60">
-        <div class="container">
-            <div class="activity-wrapper">
-                <div class="section-heading">
-                    <h1 class="section-heading__title">Recent Activity</h1>
-                </div>
-
-                <div class="activity-item">
-                    <div class="flex-between">
-                        <div class="activity-type">Fb video view + share</div>
-                        <p class="activity-time text-end">4 minutes ago</p>
-                    </div>
-                    <div class="row g-0 align-items-end">
-                        <div class="col-4">
-                            <div class="activity-name">Rizvy Ahmed</div>
-                        </div>
-                        <div class="col-4">
-                            <div class="activity_process">
-                                <div class="activity_process_count text-center">60 of 100</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                        style="width: 50%">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <p class="activity-earn text-end">$900</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="flex-between">
-                        <div class="activity-type">Fb video view + share</div>
-                        <p class="activity-time text-end">4 minutes ago</p>
-                    </div>
-                    <div class="row g-0 align-items-end">
-                        <div class="col-4">
-                            <div class="activity-name">Rizvy Ahmed</div>
-                        </div>
-                        <div class="col-4">
-                            <div class="activity_process">
-                                <div class="activity_process_count text-center">60 of 100</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                        style="width: 50%">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <p class="activity-earn text-end">$900</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="flex-between">
-                        <div class="activity-type">Fb video view + share</div>
-                        <p class="activity-time text-end">4 minutes ago</p>
-                    </div>
-                    <div class="row g-0 align-items-end">
-                        <div class="col-4">
-                            <div class="activity-name">Rizvy Ahmed</div>
-                        </div>
-                        <div class="col-4">
-                            <div class="activity_process">
-                                <div class="activity_process_count text-center">60 of 100</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                        style="width: 50%">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <p class="activity-earn text-end">$900</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="flex-between">
-                        <div class="activity-type">Fb video view + share</div>
-                        <p class="activity-time text-end">4 minutes ago</p>
-                    </div>
-                    <div class="row g-0 align-items-end">
-                        <div class="col-4">
-                            <div class="activity-name">Rizvy Ahmed</div>
-                        </div>
-                        <div class="col-4">
-                            <div class="activity_process">
-                                <div class="activity_process_count text-center">60 of 100</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                        style="width: 50%">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <p class="activity-earn text-end">$900</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="flex-between">
-                        <div class="activity-type">Fb video view + share</div>
-                        <p class="activity-time text-end">4 minutes ago</p>
-                    </div>
-                    <div class="row g-0 align-items-end">
-                        <div class="col-4">
-                            <div class="activity-name">Rizvy Ahmed</div>
-                        </div>
-                        <div class="col-4">
-                            <div class="activity_process">
-                                <div class="activity_process_count text-center">60 of 100</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                        style="width: 50%">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <p class="activity-earn text-end">$900</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="flex-between">
-                        <div class="activity-type">Fb video view + share</div>
-                        <p class="activity-time text-end">4 minutes ago</p>
-                    </div>
-                    <div class="row g-0 align-items-end">
-                        <div class="col-4">
-                            <div class="activity-name">Rizvy Ahmed</div>
-                        </div>
-                        <div class="col-4">
-                            <div class="activity_process">
-                                <div class="activity_process_count text-center">60 of 100</div>
-                                <div class="progress">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                                        style="width: 50%">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <p class="activity-earn text-end">$900</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 
@@ -383,28 +202,7 @@
         </div>
     </div>
 
-    <div class="callaction my-60 py-120">
-        <div class="container">
-            <div class="row gy-3 justify-content-center align-items-center">
-                <div class="col-lg-5">
-                    <div class="callaction-content">
-                        <h3>Find Great Work</h3>
-                        <p>Hello sir, you can now earn more by referring your friends. You will get 5% commission
-                            from your referral’s Deposit & 5% from your referral’s each completed task.</p>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="callaction_wrapper">
-                        <p>So what are you waiting for?</p>
-                        <h2>YOU CAN EARN 5% MORE BY REFERRAL </h2>
-                        <a href="" class="btn mt-4">Earn Money</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="add-section py-60">
+    <div class="add-section about-add py-60">
         <div class="container">
             <div class="row gy-4 justify-content-center align-items-center">
                 <div class="col-lg-5 order-2 order-lg-1">
