--- a/registration.html
+++ b/registration.html
@@ -45,6 +45,7 @@
     <a class="scroll-top"><i class="fas fa-angle-double-up"></i></a>
     <!-- ==================== Scroll to Top End Here ==================== -->
     <!-- header nav -->
+    <!-- header nav -->
     <header class="header" id="header">
         <div class="container">
             <div class="header_wrapper">
@@ -56,13 +57,13 @@
                         <li class="d-md-block d-none">
                             <a href="">About Us</a>
                         </li>
-                        <li class="d-md-block d-none">
+                        <li>
                             <a href="">Login</a>
                         </li>
-                        <li class="d-md-block d-none">
+                        <li>
                             <a href="">Registration</a>
                         </li>
-                        <li>
+                        <li class="d-md-block d-none">
                             <span id="header_toggler" class="header_toggler"><i class="fas fa-bars"></i></span>
                         </li>
                     </ul>
