--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
 <!-- meta tags and other links -->
-<!-- Header -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,25 +25,13 @@
 </head>
 
 <body>
-
-    <!--==================== Preloader Start ====================-->
+    <!-- Preloader -->
     <div class="preloader">
         <div class="loader-p"></div>
     </div>
-    <!--==================== Preloader End ====================-->
-
-    <!--==================== Overlay Start ====================-->
-    <div class="body-overlay"></div>
-    <!--==================== Overlay End ====================-->
-
-    <!--==================== Sidebar Overlay End ====================-->
-    <div class="sidebar-overlay"></div>
-    <!--==================== Sidebar Overlay End ====================-->
-
-    <!-- ==================== Scroll to Top End Here ==================== -->
+    <!-- scroll top -->
     <a class="scroll-top"><i class="fas fa-angle-double-up"></i></a>
-    <!-- ==================== Scroll to Top End Here ==================== -->
-    <!-- header nav -->
+
     <!-- header nav -->
     <header class="header" id="header">
         <div class="container">
@@ -102,27 +89,26 @@
         </div>
     </div>
 
-
     <!-- ==================== Breadcrumb Start Here ==================== -->
     <section class="breadcrumb py-60">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="breadcrumb__wrapper">
-                        <h2 class="breadcrumb__title"> Log in</h2>
+                        <h2 class="breadcrumb__title">Contact Us</h2>
                         <ul class="breadcrumb__list">
                             <li class="breadcrumb__item"><a href="index.html" class="breadcrumb__link"> <i
                                         class="las la-home"></i> Home</a> </li>
                             <li class="breadcrumb__item"><i class="fas fa-arrow-right"></i></li>
-                            <li class="breadcrumb__item"> <span class="breadcrumb__item-text"> Log in </span> </li>
+                            <li class="breadcrumb__item"> <span class="breadcrumb__item-text">Contact Us</span> </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ==================== Breadcrumb End Here ==================== -->
-    <!-- ================================= Account Section Start Here ============================ -->
+
+
     <section class="account py-120">
         <div class="account-inner">
             <div class="container">
@@ -135,43 +121,34 @@
                     <div class="col-lg-6">
                         <div class="account-form">
                             <div class="account-form__content mb-4">
-                                <h3 class="account-form__title mb-2"> Sign In Your Account </h3>
-                                <p class="account-form__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    ipsam labore dolore sunt laudantium aperiam.</p>
+                                <h3 class="account-form__title mb-2">Contact with us.
+                                </h3>
+                                <p class="account-form__desc">Please feel free to reach out to us in any situation.</p>
                             </div>
                             <form action="#" method="POST">
                                 <div class="row">
-                                    <div class="col-sm-12 form-group">
+                                    <div class="col-sm-6 form-group">
+                                        <label for="name" class="form--label">Name</label>
+                                        <input type="text" class="form--control" id="name">
+                                    </div>
+                                    <div class="col-sm-6 form-group">
                                         <label for="email" class="form--label">Email Address</label>
                                         <input type="text" class="form--control" id="email">
                                     </div>
+
                                     <div class="col-sm-12 form-group">
-                                        <label for="your-password" class="form--label">Password</label>
-                                        <div class="position-relative">
-                                            <input id="your-password" type="password" class="form-control form--control"
-                                                value="Password">
-                                            <span class="password-show-hide fas fa-eye toggle-password fa-eye-slash"
-                                                id="#your-password"></span>
-                                        </div>
+                                        <label for="subject" class="form--label">Subject</label>
+                                        <input type="text" class="form--control" id="subject">
                                     </div>
+
                                     <div class="col-sm-12 form-group">
-                                        <div class="d-flex flex-wrap justify-content-between">
-                                            <div class="form--check">
-                                                <input class="form-check-input" type="checkbox" value="" id="remember">
-                                                <label class="form-check-label" for="remember">Remember me </label>
-                                            </div>
-                                            <a href="#" class="forgot-password text--base">Forgot Your Password?</a>
-                                        </div>
+                                        <label for="text" class="form--label">Subject</label>
+                                        <textarea name="" id="text" class="form--control"></textarea>
                                     </div>
+
+
                                     <div class="col-sm-12 form-group">
-                                        <button type="submit" class="btn btn--base w-100">Sign In</button>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <div class="have-account text-center">
-                                            <p class="have-account__text">Don't Have An Account? <a
-                                                    href="registration.html"
-                                                    class="have-account__link text--base">Create Account</a></p>
-                                        </div>
+                                        <button type="submit" class="btn btn--base w-100">Send</button>
                                     </div>
                                 </div>
                             </form>
@@ -181,19 +158,53 @@
             </div>
         </div>
     </section>
-    <!-- ================================= Account Section End Here ============================ -->
-    <!-- Footer -->
 
-    <!-- ==================== Footer Start Here ==================== -->
+    <div class="add-section about-add py-60">
+        <div class="container">
+            <div class="row gy-4 justify-content-center align-items-center">
+                <div class="col-lg-5 order-2 order-lg-1">
+                    <div class="add-content">
+                        <h3>Download & Install Apply Now</h3>
+                        <p>Work up job Site is a Micro Job & freelance services marketplace where you can easily earn
+                            more
+                            money and also businesses can find and hire individual contractors to do some work remotely,
+                            order a micro job, communication and get tasks done quickly and is the best micro job site
+                            in
+                            the world where freelancers around the world directly connect with business owners and get
+                            hired. It helps you to earn money online.Set filters and target your ideal freelancer.
+                        </p>
+
+                        <a href="" class="btn btn--base mt-4">Download Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-5 order-1 order-lg-2">
+                    <div class="add-image">
+                        <div class="row">
+                            <div class="col-5">
+                                <img src="assets/images/thumbs/mobile.png" alt="">
+                            </div>
+                            <div class="col-6">
+                                <img src="assets/images/thumbs/mobile2.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer section -->
     <footer class="footer-area">
-        <div class="pb-60 pt-120">
+        <div class="py-60">
             <div class="container">
                 <div class="row justify-content-center gy-5">
+                    <div class="col-12">
+                        <div class="footer-item__logo">
+                            <a href="index.html"> <img src="assets/images/logo/logo.png" alt=""></a>
+                        </div>
+                    </div>
                     <div class="col-xl-4 col-sm-6 col-xsm-6">
                         <div class="footer-item">
-                            <div class="footer-item__logo">
-                                <a href="index.html"> <img src="assets/images/logo/logo.png" alt=""></a>
-                            </div>
                             <p class="footer-item__desc"> Herbal Shop brings you tons of products in over 20+ different
                                 categories, including men's fashion, women's fashion, baby fashion, and more. </p>
                             <ul class="social-list">
@@ -280,8 +291,6 @@
             </div>
         </div>
     </footer>
-    <!-- ==================== Footer End Here ==================== -->
-
 
     <!-- Jquery js -->
     <script src="assets/js/jquery-3.6.3.min.js"></script>
@@ -290,12 +299,31 @@
     <!-- Slick js -->
     <script src="assets/js/slick.min.js"></script>
     <!-- Odometer js -->
-
+    <script src="assets/js/magnific.min.js"></script>
     <!-- Viewport js -->
     <script src="assets/js/viewport.jquery.js"></script>
-
     <!-- main js -->
     <script src="assets/js/main.js"></script>
+
+    <script>
+        // magnific popup
+        $('.video_popup').magnificPopup({
+            type: 'iframe'
+        });
+
+        let header_toggler = document.getElementById("header_toggler")
+        let animated_nav = document.getElementById("animated-nav")
+        let cross_animated = document.getElementById("cross-animated")
+
+        header_toggler.addEventListener("click", function () {
+            animated_nav.classList.add("active")
+        })
+
+        cross_animated.addEventListener("click", function () {
+            animated_nav.classList.remove("active")
+        })
+    </script>
+
 </body>
 
 </html>
