--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                             <a href="">About Us</a>
                         </li>
                         <li>
-                            <a href="">Login</a>
+                            <a href="">Registration</a>
                         </li>
                         <li>
-                            <a href="">Registration</a>
+                            <a href="">Login</a>
                         </li>
                         <li class="d-md-block d-none">
                             <span id="header_toggler" class="header_toggler"><i class="fas fa-bars"></i></span>
@@ -323,13 +323,14 @@
                     <h1 class="section-heading__title">Our Service</h1>
                 </div>
 
-                <div class="row">
+                <div class="row gy-6">
                     <div class="col-lg-5">
                         <div class="service-thumb">
-                            <img src="assets/images/icons/Payments_3.webp" alt="">
+                            <img class="fit-image"
+                                src="assets/images/thumbs/Header - Top Payment Methods in Bangladesh.webp" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-6">
                         <div class="row g-4 align-items-center justify-content-center">
                             <div class="col-sm-6">
                                 <div class="service-card">
@@ -440,18 +441,17 @@
 
     <!-- footer section -->
     <footer class="footer-area">
-        <div class="py-60">
+        <div class="pb-60 pt-120">
             <div class="container">
                 <div class="row justify-content-center gy-5">
-                    <div class="col-12">
-                        <div class="footer-item__logo">
-                            <a href="index.html"> <img src="assets/images/logo/logo.png" alt=""></a>
-                        </div>
-                    </div>
                     <div class="col-xl-4 col-sm-6 col-xsm-6">
                         <div class="footer-item">
-                            <p class="footer-item__desc"> Herbal Shop brings you tons of products in over 20+ different
-                                categories, including men's fashion, women's fashion, baby fashion, and more. </p>
+                            <div class="footer-item__logo">
+                                <a href="index.html"> <img src="assets/images/logo/logo.svg" alt=""></a>
+                            </div>
+                            <p class="footer-item__desc">Unlock Your Earning Potential: Explore the Best Microjob &
+                                Freelance Opportunities Online
+                            </p>
                             <ul class="social-list">
                                 <li class="social-list__item"><a href="https://www.facebook.com"
                                         class="social-list__link flex-center"><i class="fab fa-facebook-f"></i></a>
@@ -469,24 +469,28 @@
                     </div>
                     <div class="col-xl-2 col-sm-6 col-xsm-6">
                         <div class="footer-item">
-                            <h5 class="footer-item__title">Userful Link</h5>
+                            <h5 class="footer-item__title">Useful Link</h5>
                             <ul class="footer-menu">
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Home</a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">About Us </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Contact Us </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">FAQ</a></li>
+                                <li class="footer-menu__item"><a href="./index.html" class="footer-menu__link">Home</a>
+                                </li>
+                                <li class="footer-menu__item"><a href="./about.html" class="footer-menu__link">About Us
+                                    </a></li>
+                                <li class="footer-menu__item"><a href="./contact.html" class="footer-menu__link">Contact
+                                        Us </a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-3 col-sm-6 col-xsm-6">
                         <div class="footer-item">
-                            <h5 class="footer-item__title">Categories</h5>
+                            <h5 class="footer-item__title">Quick Link</h5>
                             <ul class="footer-menu">
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Blog </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Blog Details </a>
+                                <li class="footer-menu__item"><a href="./registration.html"
+                                        class="footer-menu__link">Registration </a>
                                 </li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Dashboard </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link"> Contact Us</a></li>
+                                <li class="footer-menu__item"><a href="./login.html" class="footer-menu__link">Login
+                                    </a></li>
+                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Download Apps </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
