--- a/login.html
+++ b/login.html
@@ -58,10 +58,10 @@
                             <a href="">About Us</a>
                         </li>
                         <li>
-                            <a href="">Login</a>
+                            <a href="">Registration</a>
                         </li>
                         <li>
-                            <a href="">Registration</a>
+                            <a href="">Login</a>
                         </li>
                         <li class="d-md-block d-none">
                             <span id="header_toggler" class="header_toggler"><i class="fas fa-bars"></i></span>
@@ -192,10 +192,11 @@
                     <div class="col-xl-4 col-sm-6 col-xsm-6">
                         <div class="footer-item">
                             <div class="footer-item__logo">
-                                <a href="index.html"> <img src="assets/images/logo/logo.png" alt=""></a>
+                                <a href="index.html"> <img src="assets/images/logo/logo.svg" alt=""></a>
                             </div>
-                            <p class="footer-item__desc"> Herbal Shop brings you tons of products in over 20+ different
-                                categories, including men's fashion, women's fashion, baby fashion, and more. </p>
+                            <p class="footer-item__desc">Unlock Your Earning Potential: Explore the Best Microjob &
+                                Freelance Opportunities Online
+                            </p>
                             <ul class="social-list">
                                 <li class="social-list__item"><a href="https://www.facebook.com"
                                         class="social-list__link flex-center"><i class="fab fa-facebook-f"></i></a>
@@ -213,24 +214,28 @@
                     </div>
                     <div class="col-xl-2 col-sm-6 col-xsm-6">
                         <div class="footer-item">
-                            <h5 class="footer-item__title">Userful Link</h5>
+                            <h5 class="footer-item__title">Useful Link</h5>
                             <ul class="footer-menu">
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Home</a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">About Us </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Contact Us </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">FAQ</a></li>
+                                <li class="footer-menu__item"><a href="./index.html" class="footer-menu__link">Home</a>
+                                </li>
+                                <li class="footer-menu__item"><a href="./about.html" class="footer-menu__link">About Us
+                                    </a></li>
+                                <li class="footer-menu__item"><a href="./contact.html" class="footer-menu__link">Contact
+                                        Us </a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-3 col-sm-6 col-xsm-6">
                         <div class="footer-item">
-                            <h5 class="footer-item__title">Categories</h5>
+                            <h5 class="footer-item__title">Quick Link</h5>
                             <ul class="footer-menu">
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Blog </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Blog Details </a>
+                                <li class="footer-menu__item"><a href="./registration.html"
+                                        class="footer-menu__link">Registration </a>
                                 </li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Dashboard </a></li>
-                                <li class="footer-menu__item"><a href="#" class="footer-menu__link"> Contact Us</a></li>
+                                <li class="footer-menu__item"><a href="./login.html" class="footer-menu__link">Login
+                                    </a></li>
+                                <li class="footer-menu__item"><a href="#" class="footer-menu__link">Download Apps </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -289,11 +294,8 @@
     <script src="assets/js/boostrap.bundle.min.js"></script>
     <!-- Slick js -->
     <script src="assets/js/slick.min.js"></script>
-    <!-- Odometer js -->
-
     <!-- Viewport js -->
     <script src="assets/js/viewport.jquery.js"></script>
-
     <!-- main js -->
     <script src="assets/js/main.js"></script>
 </body>
