--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <li>
                             <a href="">Registration</a>
                         </li>
+                        <li> <span class="text-md-none text-white">|</span> </li>
                         <li>
                             <a href="">Login</a>
                         </li>
@@ -118,7 +119,19 @@
                 <div class="col-sm-6 col-lg-3">
                     <div class="counter-box">
                         <div class="counter-box__icon">
-                            <img src="assets/images/icons/cv.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="64" x="0" y="0"
+                                viewBox="0 0 24 24" style="enable-background:new 0 0 512 512" xml:space="preserve"
+                                class="">
+                                <g>
+                                    <path
+                                        d="M9 10c-2.757 0-5-2.243-5-5s2.243-5 5-5 5 2.243 5 5-2.243 5-5 5zM4.75 12C2.13 12 0 14.13 0 16.75v3.5c0 .41.34.75.75.75H10v-3.25c0-1.88 1.4-3.43 3.21-3.7.26-.76.75-1.4 1.38-1.86-1-.286-1.054-.19-9.84-.19zM22.25 16H21v-.75c0-.965-.785-1.75-1.75-1.75h-2.5c-.965 0-1.75.785-1.75 1.75V16h-1.25a1.74 1.74 0 0 0-1.253.533L18 19.404l5.503-2.871A1.74 1.74 0 0 0 22.25 16zm-5.75 0v-.75a.25.25 0 0 1 .25-.25h2.5a.25.25 0 0 1 .25.25V16z"
+                                        fill="#000000" opacity="1" data-original="#000000" class=""></path>
+                                    <path
+                                        d="M18.347 20.915a.75.75 0 0 1-.693 0L12 17.965v4.285c0 .965.785 1.75 1.75 1.75h8.5c.965 0 1.75-.785 1.75-1.75v-4.285z"
+                                        fill="#000000" opacity="1" data-original="#000000" class=""></path>
+                                </g>
+                            </svg>
                         </div>
                         <h4 class="counter-box__count">225741</h4>
                         <div class="counter-box__title">Job Posted</div>
@@ -127,7 +140,16 @@
                 <div class="col-sm-6 col-lg-3">
                     <div class="counter-box user-box">
                         <div class="counter-box__icon">
-                            <img src="assets/images/icons/team.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="64" x="0" y="0"
+                                viewBox="0 0 64 64" style="enable-background:new 0 0 512 512" xml:space="preserve"
+                                class="">
+                                <g>
+                                    <path
+                                        d="M59.923 35.052 51 31.333v-2.67A9.948 9.948 0 0 0 55.8 22h.2a3 3 0 0 0 .082-6l.98-2.272a8.078 8.078 0 0 0-4.07-10.551L50.2 1.907a10.248 10.248 0 0 0-10.232 1.112l-1.556 1.174a6.259 6.259 0 0 0-3.8 2.831 6.2 6.2 0 0 0-.552 5.216 10.372 10.372 0 0 0-4.561.111 8.047 8.047 0 0 0-4.507-9.173L22.2 1.907a10.248 10.248 0 0 0-10.232 1.112l-1.556 1.174a6.23 6.23 0 0 0-4.03 8.822L7.876 16A3 3 0 0 0 8 22h.2a9.962 9.962 0 0 0 4.8 6.661v2.672l-8.923 3.719A4.987 4.987 0 0 0 1 39.667V53a1 1 0 0 0 1 1h7v8a1 1 0 0 0 1 1h44a1 1 0 0 0 1-1v-8h7a1 1 0 0 0 1-1V39.667a4.987 4.987 0 0 0-3.077-4.615Zm-24.55-20.325L38.164 16a6.078 6.078 0 0 1 3.061 7.939l-.3.685-1.025-2.071a1 1 0 0 0-1.5-.353l-1.6 1.2a8 8 0 0 1-9.6 0l-1.6-1.2a.989.989 0 0 0-.829-.173 1 1 0 0 0-.666.526L23 24.771l-.826-1.651a4.229 4.229 0 0 1 3.78-6.12 4.671 4.671 0 0 1 3.893 2.083l.314.472 1.664-1.11-.314-.471a6.661 6.661 0 0 0-3.771-2.724 8.213 8.213 0 0 1 7.633-.523ZM42 29h1a1 1 0 0 1 0 2h-1ZM29 40.539a9.992 9.992 0 0 0 6 0v2.047l-3 3-3-3ZM32 39a8.009 8.009 0 0 1-8-8v-3.764l1.358-2.717L26 25a10 10 0 0 0 12 0l.642-.481L40 27.236V31a8.009 8.009 0 0 1-8 8Zm-10-8h-1a1 1 0 0 1 0-2h1ZM9 51.04V52H3V39.667A2.994 2.994 0 0 1 4.846 36.9l9.539-3.974A1 1 0 0 0 15 32v-3.936a1.046 1.046 0 0 0-.579-.907 7.968 7.968 0 0 1-4.372-6.267 1 1 0 0 0-.994-.89H8a1 1 0 0 1 0-2h1a1 1 0 0 0 1-1.007l-.007-1a1 1 0 0 0-.105-.44L8.171 12.12a4.228 4.228 0 0 1 2.888-6.02 1.025 1.025 0 0 0 .391-.179l1.72-1.3a8.218 8.218 0 0 1 8.2-.89L24.164 5a6.078 6.078 0 0 1 3.061 7.939l-.162.375a9.687 9.687 0 0 0-1.093.705L24.393 15.2a6.221 6.221 0 0 0-4.014 8.812L21.875 27H21a3 3 0 0 0 0 6h1.2a10.024 10.024 0 0 0 4.8 6.647v2.593l-14.338 3.983A5.014 5.014 0 0 0 9 51.04ZM53 61h-6v-8h-2v8H19v-8h-2v8h-6v-9.96a3.007 3.007 0 0 1 2.2-2.89l14.509-4.03 3.587 3.587a1 1 0 0 0 1.414 0l3.587-3.587L50.8 48.15a3.007 3.007 0 0 1 2.2 2.89Zm8-9h-6v-.96a5.014 5.014 0 0 0-3.662-4.817L37 42.24v-2.593A10.024 10.024 0 0 0 41.8 33H43a3 3 0 0 0 0-6h-.918l.98-2.271a8.078 8.078 0 0 0-4.07-10.551l-2.32-1.057-.5-1A4.228 4.228 0 0 1 39.059 6.1a1.025 1.025 0 0 0 .391-.179l1.72-1.3a8.218 8.218 0 0 1 8.2-.89L52.164 5a6.078 6.078 0 0 1 3.061 7.939l-1.15 2.661a1 1 0 0 0-.082.4L54 17a1 1 0 0 0 1 1h1a1 1 0 0 1 0 2h-1.055a1 1 0 0 0-.994.89 7.964 7.964 0 0 1-4.4 6.279 1 1 0 0 0-.555.895V32a1 1 0 0 0 .615.923l9.543 3.977A2.994 2.994 0 0 1 61 39.667Z"
+                                        fill="#000000" opacity="1" data-original="#000000" class=""></path>
+                                </g>
+                            </svg>
                         </div>
                         <h4 class="counter-box__count">225741</h4>
                         <div class="counter-box__title">Job Posted</div>
@@ -136,7 +158,22 @@
                 <div class="col-sm-6 col-lg-3">
                     <div class="counter-box">
                         <div class="counter-box__icon">
-                            <img src="assets/images/icons/success.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="64" x="0" y="0"
+                                viewBox="0 0 48 48" style="enable-background:new 0 0 512 512" xml:space="preserve"
+                                class="">
+                                <g>
+                                    <path
+                                        d="M34 45H8a5.006 5.006 0 0 1-5-5V8a5.006 5.006 0 0 1 5-5h18.23a5.029 5.029 0 0 1 3.7 1.635l7.77 8.553A4.958 4.958 0 0 1 39 16.55v9.97a1 1 0 0 1-2 0v-9.97a2.968 2.968 0 0 0-.777-2.014L28.45 5.982A3.024 3.024 0 0 0 26.23 5H8a3 3 0 0 0-3 3v32a3 3 0 0 0 3 3h26a1 1 0 0 1 0 2z"
+                                        fill="#000000" opacity="1" data-original="#000000"></path>
+                                    <path
+                                        d="M34 17h-4a3 3 0 0 1-3-3V4.42a1 1 0 0 1 2 0V14a1 1 0 0 0 1 1h4a1 1 0 0 1 0 2zM13.5 17.5h-3a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2zm-3-5v3h3v-3zM13.5 27.5h-3a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2zm-3-5v3h3v-3zM25 27h-7a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2zM23 23h-5a1 1 0 0 1 0-2h5a1 1 0 0 1 0 2zM13.5 37.5h-3a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2zm-3-5v3h3v-3zM25 37h-7a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2zM23 33h-5a1 1 0 0 1 0-2h5a1 1 0 0 1 0 2zM25 17h-7a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2zM23 13h-5a1 1 0 0 1 0-2h5a1 1 0 0 1 0 2zM34 39a1 1 0 0 1-.707-.293l-3-3a1 1 0 0 1 1.414-1.414l2.226 2.226 4.3-5.159a1 1 0 1 1 1.536 1.28l-5 6a1 1 0 0 1-.723.359z"
+                                        fill="#000000" opacity="1" data-original="#000000"></path>
+                                    <path
+                                        d="M35 45a10 10 0 1 1 10-10 10.011 10.011 0 0 1-10 10zm0-18a8 8 0 1 0 8 8 8.009 8.009 0 0 0-8-8z"
+                                        fill="#000000" opacity="1" data-original="#000000"></path>
+                                </g>
+                            </svg>
                         </div>
                         <h4 class="counter-box__count">225741</h4>
                         <div class="counter-box__title">Job Posted</div>
@@ -145,7 +182,16 @@
                 <div class="col-sm-6 col-lg-3">
                     <div class="counter-box">
                         <div class="counter-box__icon">
-                            <img src="assets/images/icons/earning.png" alt="">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="64" x="0" y="0"
+                                viewBox="0 0 486.603 486.603" style="enable-background:new 0 0 512 512"
+                                xml:space="preserve" class="">
+                                <g>
+                                    <path
+                                        d="M183.216 176.333c33.6 19.4 88 19.4 121.4 0 33.5-19.4 33.2-50.9-.4-70.3s-88-19.4-121.4 0-33.2 50.8.4 70.3zm15.4-33.6c2.6-.8 5.1-1.7 7.6-2.5 1.9-.6 3-.7 3.8-.3.5.3.8.7 1.2 1.4 1.7 3.2 4.5 6 8 8.6.6.5 1.2.9 1.9 1.3 1.9 1.1 4 1.9 6.6 2.5 6.5 1.4 12.3-1.1 11.6-5.1-.2-1.4-.9-2.6-1.8-3.9-2.2-3.3-5-6.4-6.5-9.8-2.4-5.6-1.3-10.6 6.4-14.6 8.8-4.5 18.5-4.7 28.9-2 4.2 1.2 4.2 1.2 7.5-.7 1.1-.6 2.2-1.3 3.3-1.9 2.5-1.4 3.4-1.4 5.9 0 .8.4 1.5.9 2.3 1.3 5.2 3 5.2 3 .1 6.1-3.7 2.1-3.7 2.1-.6 4.6 2.4 1.9 4.2 3.9 5.7 6.1.8 1.2.3 2.1-1.6 2.7-2.9.9-5.8 1.9-8.7 2.8-1.8.5-2.9.6-3.7.2-.4-.3-.8-.7-1.2-1.3-1.9-3.1-4.8-5.7-8.7-8-.5-.3-1.1-.6-1.7-.9-1.3-.6-2.5-1.2-4.1-1.6-5.6-1.3-10.5.8-9.8 4.3.3 1.8 1.3 3.4 2.5 5 2 2.8 4.1 5.6 5.6 8.5 4.7 9.4-5.5 18.6-21.8 19.5-5.9.3-11.5-.4-16.6-2.1-2.2-.7-3.9-.6-5.7.5-1.7 1.1-3.6 2.1-5.3 3.1-1.6.9-3.3 1-4.9.1-1.2-.6-2.3-1.3-3.5-1.9-.8-.5-1.6-.9-2.4-1.4-1.7-1-1.5-2 .1-3 1.3-.8 2.6-1.5 3.8-2.3 2.9-1.7 2.9-1.8.5-3.7-3-2.4-5.7-4.9-7.4-7.7-1.1-2.2-.8-2.7 2.7-3.9zm116.9 39.8c9.3-5.4 24.3-5.4 33.6 0s9.4 14.1.1 19.5c-9.2 5.4-24.3 5.4-33.6 0s-9.4-14.1-.1-19.5zm-177.2-102.3c9.3-5.4 24.3-5.4 33.7 0 9.3 5.4 9.4 14.1.1 19.5-9.2 5.4-24.3 5.4-33.6 0-9.4-5.4-9.5-14.1-.2-19.5zm-125.9 41.7 265.3 153.1c15.3 8.9 40.2 8.9 55.4 0l142.1-82.6c15.2-8.9 15.2-23.3-.1-32.1l-265.3-153.2c-15.3-8.9-40.2-8.8-55.5 0l-142.1 82.7c-15.2 8.8-15.1 23.2.2 32.1zm57.6-32.5c-1.7-1-3.5-1.8-5.4-2.6l84.9-49.3c1.3 1.1 2.8 2.1 4.5 3.1 15.5 9 40.7 8.9 56.1 0 1.8-1 3.3-2.1 4.6-3.3l206.6 119.3c-2.8 1-5.3 2.1-7.7 3.5-15.5 9-15.4 23.5.2 32.5 2.4 1.4 5 2.5 7.8 3.5l-85.7 49.8c-1.7-1.6-3.7-3.1-6.1-4.5-15.6-9-40.7-9-56.1 0-1.2.7-2.2 1.4-3.2 2.2l-206-119c2-.8 3.9-1.7 5.6-2.7 15.5-8.9 15.4-23.5-.1-32.5zm-64.5 63.1c6.7-3.5 17.2-3 23.7.8l277.2 160 149.9-87.1c6.5-3.8 17.1-3.8 23.6 0 6.6 3.8 6.6 9.9.1 13.7l-159.3 92.6c-7.8 4.5-20.5 4.5-28.3 0l-5.6-3.2-3.9-2.3-278-160.4c-6.7-4-6.6-10.4.6-14.1zm474.8 137.5-159.3 92.6c-7.8 4.5-20.5 4.5-28.3 0l-5.6-3.2-4-2.3-277.9-160.5c-6.8-3.9-6.6-10.3.6-14.1 6.7-3.5 17.2-3 23.7.8l277.2 160 149.8-87c6.5-3.8 17.1-3.8 23.7 0 6.5 3.8 6.6 9.9.1 13.7zm-474.8-37.4c6.7-3.5 17.2-3 23.7.8l277.2 160.1 149.9-87.2c6.5-3.8 17.1-3.8 23.6 0 6.6 3.8 6.6 9.9.1 13.7l-159.3 92.6c-7.8 4.5-20.5 4.5-28.3 0l-5.6-3.2-3.9-2.3-278-160.4c-6.7-3.9-6.6-10.3.6-14.1zm474.8 137.5-159.3 92.6c-7.8 4.5-20.5 4.5-28.3 0l-5.6-3.2-4-2.3-277.9-160.5c-6.8-3.9-6.6-10.3.6-14.1 6.7-3.5 17.2-3 23.7.8l277.2 160 149.9-87.1c6.5-3.8 17.1-3.8 23.7 0 6.4 3.9 6.5 10 0 13.8z"
+                                        fill="#000000" opacity="1" data-original="#000000" class=""></path>
+                                </g>
+                            </svg>
                         </div>
                         <h4 class="counter-box__count">225741</h4>
                         <div class="counter-box__title">Job Posted</div>
@@ -439,6 +485,47 @@
         </div>
     </div>
 
+    <!-- payment section -->
+    <div class="payment py-60">
+        <div class="container">
+            <div class="section-heading">
+                <h1 class="section-heading__title">Our Payment Service</h1>
+            </div>
+            <div class="payment-slider">
+                <div class="payment-item">
+                    <div class="payment-item__image">
+                        <img src="assets/images/payment/bkash.png" alt="">
+                    </div>
+                    <div class="payment-item__title">Bkash</div>
+                </div>
+                <div class="payment-item">
+                    <div class="payment-item__image">
+                        <img src="assets/images/payment/naghad.png" alt="">
+                    </div>
+                    <div class="payment-item__title">Nagad</div>
+                </div>
+                <div class="payment-item">
+                    <div class="payment-item__image">
+                        <img src="assets/images/payment/rocjet.png" alt="">
+                    </div>
+                    <div class="payment-item__title">Rocket</div>
+                </div>
+                <div class="payment-item">
+                    <div class="payment-item__image">
+                        <img src="assets/images/payment/upay.png" alt="">
+                    </div>
+                    <div class="payment-item__title">uPay</div>
+                </div>
+                <div class="payment-item">
+                    <div class="payment-item__image">
+                        <img src="assets/images/payment/tap.png" alt="">
+                    </div>
+                    <div class="payment-item__title">Trust Axiata Pay</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- footer section -->
     <footer class="footer-area">
         <div class="pb-60 pt-120">
@@ -456,14 +543,17 @@
                                 <li class="social-list__item"><a href="https://www.facebook.com"
                                         class="social-list__link flex-center"><i class="fab fa-facebook-f"></i></a>
                                 </li>
+                                <li class="social-list__item"><a href="https://www.youtube.com/accounts"
+                                        class="social-list__link flex-center active"> <i class="fab fa-youtube"></i></a>
+                                </li>
                                 <li class="social-list__item"><a href="https://www.twitter.com"
-                                        class="social-list__link flex-center active"> <i class="fab fa-twitter"></i></a>
+                                        class="social-list__link flex-center"> <i class="fab fa-twitter"></i></a>
                                 </li>
-                                <li class="social-list__item"><a href="https://www.linkedin.com"
-                                        class="social-list__link flex-center"> <i class="fab fa-linkedin-in"></i></a>
-                                </li>
-                                <li class="social-list__item"><a href="https://www.pinterest.com"
+                                <li class="social-list__item"><a href="https://www.tiktok.com"
+                                        class="social-list__link flex-center"> <i class="fab fa-tiktok"></i></a></li>
+                                <li class="social-list__item"><a href="https://www.instagram.com/accounts"
                                         class="social-list__link flex-center"> <i class="fab fa-instagram"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
